feat(infra): added the controllers and interfaces for the usecases